# OfflineRewardsScreen.gd
extends PanelContainer

# Signal pour dire au LoadingScreen que le joueur a cliqu√© et qu'on peut continuer.
signal rewards_claimed

const PET_SLOT_SCENE = preload("res://Scenes/PetSlot.tscn")

var _results: Dictionary

# üîπ Configure l'√©cran avec les r√©sultats de la simulation.
func setup(results: Dictionary):
	_results = results
	
	%CoinsLabel.text = "Pi√®ces gagn√©es : +%d" % results.net_coin_gain
	
	%GemsLabel.text = "Gemmes gagn√©es : +%d" % results.earned_gems
	%EggsLabel.text = "≈íufs ouverts : %d" % results.eggs_hatched
	
	if results.best_pets_for_display.is_empty():
		# On cherche le parent du HBox pour le cacher, qui est probablement un VBox.
		var pet_section_title = find_child("Meilleurs pets trouv√©s :", true, false)
		if pet_section_title: pet_section_title.hide()
		%PetDisplayBox.hide()
	else:
		for pet_data in results.best_pets_for_display:
			var slot = PET_SLOT_SCENE.instantiate()
			%PetDisplayBox.add_child(slot)
			
			var display_instance = {
				"base_name": pet_data.base_name,
				"type": pet_data.type,
				"unique_id": -1,
			}
			slot.setup(display_instance)
			slot.focus_mode = Control.FOCUS_NONE
			slot.tooltip_text = ""

# üîπ Connecte le bouton de r√©clamation.
func _ready():
	%ClaimButton.pressed.connect(_on_claim_pressed)

# üîπ G√®re le clic sur "R√©clamer".
func _on_claim_pressed():
	# Appelle la fonction dans DataManager pour appliquer r√©ellement les gains.
	DataManager.apply_offline_gains(_results)
	
	# √âmet le signal pour que le LoadingScreen sache qu'il peut continuer.
	rewards_claimed.emit()
	queue_free()
